--- a/src/routes/hex-to-rgb/style.scss
+++ b/src/routes/hex-to-rgb/style.scss
@@ -6,7 +6,6 @@
 
 :root {
 	--red: #{$red};
-	--cyan: #{$cyan};
 	--text: #{$text};
 	--gradient: #{$gradient};
 	--background: #{$background};
@@ -75,8 +74,8 @@ input[type='number'] {
 
 .floating-box {
 	background-color: var(--background);
-	border-radius: 3px;
-	border: 3px solid var(--cyan);
+	border-radius: 10px;
+	box-shadow: 0px 0px 7px 0px #ddd;
 
 	padding: 0 4%;
 
